@@ -11,6 +11,11 @@ Revision history for Perl module Math::Prime::Util
 
     - Monolithic sieves beyond 30*2^32 (~ 1.2 * 10^11) overflowed.
 
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - is_primitive_root much faster (doesn't need to calulate totient,
+      and faster rejection when n has no primitive root).
+
     [OTHER]
 
     - Added ability to use -DBENCH_SEG for benchmarking sieves using
